# spacetime-metric-engineering

./: .gitignore  FINAL_REFREEZE_AND_SOURCE_REPORT.md  QFT_SIDE_TEST_STRATEGY.md  README.md  REFREEZE_DECISION_SHEET.md  active_rail_technical_disclosure.tex  included_bundles_manifest.csv  included_bundles_manifest.json  knob_ledger.csv  plan.md  refreeze_parameters.json  service_components.csv
toolkit/adm_harness_cli/: CHANGELOG_v0_5.md  CHANGELOG_v0_5_2.md  README.md  pyproject.toml  run_v10_support_shell_edge.sh  run_v5_screen.sh  run_v5_support_shell_screen.sh
toolkit/adm_harness_cli/adm_harness/: __init__.py  adm.py  beta075_3p1_backreaction_capstone.py  beta075_action_pde_obligation.py  beta075_aligned_envelope_certificate.py  beta075_bv_denominator_ledger.py  beta075_constitutive_1p1_discretization_robustness.py  beta075_constitutive_1p1_proof_obligation.py  beta075_constitutive_1p1_source_coupled.py  beta075_first_order_3p1_coupling.py  beta075_full_system_evolution.py  beta075_moderate_3p1_capstone.py  beta075_seal_readiness.py  beta075_service_aligned_schedule.py  beta075_source_family_cross_surface_robustness.py  beta075_source_family_energy_certificate.py  beta075_source_family_energy_constant_audit.py  beta075_source_family_equations.py  beta075_source_family_validation.py  beta075_source_law_definition_package.py  beta075_timing_jitter_certificate.py  cli.py  component_algebra_ledger.py  component_source_ledger.py  composite_source_ansatz.py  config.py  endpoint_current_regulator.py  endpoint_j_closure_component.py  endpoint_j_conservation.py  (+40 more)
toolkit/adm_harness_cli/adm_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+560 files in other folders)
