[project]
name = "adm-harness"
version = "0.5.1"
description = "CLI harness for active-rail ADM ledger runs with whole-service field synthesis"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "matplotlib", "pyyaml"]

[project.scripts]
adm-harness = "adm_harness.cli:main"

[tool.setuptools]
packages = ["adm_harness"]
