[project]
name = "adm-harness"
version = "0.2.0"
description = "CLI harness for exact-builder ADM ledger runs and active-rail variant comparisons with narrow absorber-field synthesis"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "matplotlib", "pyyaml"]

[project.scripts]
adm-harness = "adm_harness.cli:main"

[tool.setuptools]
packages = ["adm_harness"]
